# starlink-openapi

./: Cargo.toml  README.md  build.rs  flake.nix  justfile
grpc/: Cargo.toml
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: AccountResponse.md  AccountResponsePaginated.md  AccountResponsePaginatedServiceResponse.md  AccountsApi.md  AddressApi.md  AddressCreateRequest.md  AddressResponse.md  AddressResponsePaginated.md  AddressResponsePaginatedServiceResponse.md  AddressResponseServiceResponse.md  AddressUpdateRequest.md  AviationMetadataResponse.md  CapacityCheckRequest.md  CapacityCheckResponse.md  CapacityCheckResponseServiceResponse.md  DataBlockSummaryResponse.md  DataBlockType.md  DataBlockUsagePublicResponse.md  DataBucketType.md  DataOverageType.md  DataPoolUsagePublicResponse.md  DataProductResponse.md  DataProductsResponse.md  DataServicePlan.md  DataUsageBillingCycle.md  DataUsageBillingCycleV2.md  DataUsageBin.md  DataUsageDaily.md  DataUsageDailyV2.md  DataUsageOverageLine.md  DataUsageResponse.md  DataUsageResponseServiceResponse.md  EnterpriseV1AccountsAccountNumberRouterLocalContentPostRequest.md  FeatureAccess.md  FeaturePermission.md  OptInPeriodResponse.md  OptInPeriodResponseServiceResponse.md  PartialPeriodResponse.md  PartialPeriodResponseIEnumerableServiceResponse.md  Permission.md  (+46 more)
openapi/src/apis/: accounts_api.rs  address_api.rs  configuration.rs  mod.rs  router_api.rs  service_line_api.rs  user_terminal_api.rs
openapi/src/models/: _enterprise_v1_accounts__account_number__router_local_content_post_request.rs  (+81 more)
(+2 files in other folders)
